# cppnow18_full_duplex

./: CMakeLists.txt  Makefile  References.md  abstract.txt  cppdock.json
docker/: Dockerfile-develop  Dockerfile-platform
example/amqp/: CMakeLists.txt  amqp_client.hpp  async_queue.cpp  async_queue.hpp  cppdock.json
example/asio_tcp/: CMakeLists.txt  main.cpp
example/beast_ws/: CMakeLists.txt  main.cpp
include/: asio_tcp.hpp  beast_ws.hpp
misc/: async_read.cpp  endpoint_compose.cpp  generic_endpoint.cpp
misc/ownership/: asio_shared.cpp  self.cpp  yikes.cpp
misc/promises/: callbacks.cpp  callbacks_2.cpp  compose.cpp  dependent.cpp  promise.cpp
misc/uwebsockets/: on_message.cpp
